data/tests/typer_error/poly_checking/valid/test2.spl
fun(a, b, c, d) :: a Int a Int -> Bool {
    return a == c && b == d;
}