data/tests/typer_error/poly_checking/invalid/test4.spl
fun(a, b, c, d) :: a a a b -> Bool {
    return a == c && b == d;
}